fix: icons size and content overflow

--- a/src/components/Note/Note.css
+++ b/src/components/Note/Note.css
@@ -11,6 +11,10 @@
 
 .note > p {
   overflow-wrap: break-word;
+  -webkit-line-clamp: 2;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .pin-btn {
@@ -32,7 +36,8 @@
 }
 
 .note-action-btns {
-  display: none;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
 .action-btn {
@@ -44,7 +49,8 @@
 }
 
 .note:hover .note-action-btns {
-  display: block;
+  transition: opacity 0.3s ease;
+  opacity: 1;
 }
 
 .action-btn:nth-child(2) {
